--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f18cb73e",
+   "metadata": {},
+   "source": [
+    "## What are these CSDS files?\n",
+    "\n",
+    "In this notebook, you will download the sample CSDS data for 12 matches. CSDS stands for Counter Strike Data Science. We extract data from each demo file into outputs called channels. Each channel is one of four types.\n",
+    "\n",
+    "- Telemetry: Information as a function of time\n",
+    "- Single event: Information for a single event type\n",
+    "- Multi event: Information for several events of similar type grouped together (For example, bomb events)\n",
+    "- Header: Metadata about the map such as map_name or tick_rate\n",
+    "\n",
+    "There are 33 channels, and you can see more information about each in the manifest file. They are all compressed parquet files except for the manifest, which is gzipped json. When we read in a CSDS file, we generally don't need all channels, so our reader will accept \"instructions\" that describe which channels and columns to read. An example of some instructions are in step 5.\n",
+    "\n",
+    "Each demo goes through our parser then through a post-parser processor (PPP) that fixes certain things and extends some channels with info from other channels. For instance, most events have a `player_id` attached to them, but this ID can be two different numbers for the same person if they disconnect and reconnect to the server. Therefore we added `player_id_fixed` which is tied to steam id and does not change even if a player disconnects or reconnects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd89acd0",
    "metadata": {},
    "source": [
@@ -44,15 +63,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6015f4af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pureskillgg_makenew_pyskill.notebook import setup_notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "769a14fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set environment variables\n",
+    "setup_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ca8607a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from pureskillgg_makenew_pyskill.notebook import setup_notebook\n",
-    "from pureskillgg_dsdk.exchange import download_dataexchange_dataset_revision\n",
-    "\n",
-    "setup_notebook()"
+    "from pureskillgg_dsdk.exchange import download_dataexchange_dataset_revision"
    ]
   },
   {
@@ -64,9 +101,18 @@
    },
    "outputs": [],
    "source": [
+    "# Choose our Data Science collection path as the location to save\n",
     "output_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
+    "\n",
+    "# Download the data\n",
     "download_dataexchange_dataset_revision(output_path, dataset_id)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65cd0271",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
