--- a/notebooks/tutorial/3 - Make header tome.ipynb
+++ b/notebooks/tutorial/3 - Make header tome.ipynb
@@ -64,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The curator is our interface to the tomes\n",
     "curator = create_tome_curator()"
    ]
   },
@@ -74,8 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "header_name = os.environ.get('PURESKILLGG_TOME_DEFAULT_HEADER_NAME')\n",
-    "header_loader = curator.get_loader(header_name)"
+    "header_loader = curator.get_header_loader()"
    ]
   },
   {
@@ -96,11 +96,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = curator.get_dataframe(header_name)\n",
-    "keys = curator.get_keyset(header_name)\n",
+    "df = header_loader.get_dataframe()\n",
+    "keys = header_loader.get_keyset()\n",
     "if df is None:\n",
     "    raise RuntimeError('Something went wrong when making the header.')\n",
     "print('There are',len(df),'matches in the header.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b35b54d9",
+   "metadata": {},
+   "source": [
+    "## Make subheaders too\n",
+    "\n",
+    "You might want to analyze players on a specific map, rank, or platform. You can create \"subheaders\" that are a filtered view of the main header. The `create_subheader_tome` will create the subheader with the specified filter applied to the header tome."
    ]
   },
   {
