--- a/notebooks/tutorial/4 - Do datascience exploration.ipynb
+++ b/notebooks/tutorial/4 - Do datascience exploration.ipynb
@@ -63,82 +63,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b4ed755",
+   "cell_type": "markdown",
+   "id": "a24dcd1e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pureskillgg_dsdk import DsReaderFs, GameDsLoader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "135122ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_name = os.environ.get('PURESKILLGG_TOME_DS_TYPE')\n",
-    "header_name = os.environ.get('PURESKILLGG_TOME_DEFAULT_HEADER_NAME')\n",
-    "df_header = curator.get_dataframe(header_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dede74a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_header.head(2)"
+    "## Read in one match worth of data\n",
+    "\n",
+    "The tome curator also provides a convienent way to grab a random match to do some exploration on. The `get_single_match` method will return the DS Loader for that particular match.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ad65a2ab",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Just grab the first match :)\n",
+    "# Just grab the first match\n",
+    "match_loader = curator.get_single_match(0)\n",
     "\n",
-    "full_path = df_header['ds_path'][0]\n",
-    "key = df_header['key'][0]\n",
-    "root_path = full_path.split(key)[0]\n",
-    "manifest_key = os.sep.join([key, ds_name])\n"
+    "# Get the manifest for these data.\n",
+    "manifest = match_loader.manifest\n",
+    "\n",
+    "# Read in all channels (you can read in a subset if you pass in reading_instructions).\n",
+    "data=match_loader.get_channels()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94358814",
+   "cell_type": "markdown",
+   "id": "a70d0923",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "csds_reader = DsReaderFs(\n",
-    "    root_path=root_path,\n",
-    "    manifest_key=manifest_key,\n",
-    ")\n",
+    "## Explore the CSDS\n",
     "\n",
-    "csds_loader = GameDsLoader(reader=csds_reader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bb9d82b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "manifest = csds_loader.manifest"
+    "The CSDS files are rich in data. Feel free to explore them in depth. Here we use the manifest file to see the available channels and how many columns they contain."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3795406c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for channel in manifest['channels']:\n",
@@ -146,13 +115,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ad39697",
+   "cell_type": "markdown",
+   "id": "652bdf66",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data = csds_loader.get_channels() # This reads in all channels because we gave no reading instructions."
+    "## Explore the relevant data and develop the engineering"
    ]
   },
   {
@@ -162,6 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inspect player_footstep dataframe\n",
     "data['player_footstep'].head()"
    ]
   },
@@ -172,6 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Count up footsteps per player\n",
     "df_footsteps_total = (\n",
     "    data['player_footstep']\n",
     "    .groupby('player_id_fixed', as_index=False)\n",
@@ -188,6 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inspect player_info dataframe\n",
     "pi = data['player_info']\n",
     "pi.head()"
    ]
@@ -199,7 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi_simple=pi[['player_id_fixed', 'commends_friendly', 'wins', 'rank']].groupby('player_id_fixed',as_index=False).max()\n",
+    "# Inspect player_info dataframe\n",
+    "pi_simple = pi[['player_id_fixed', 'commends_friendly', 'wins', 'rank']].groupby('player_id_fixed',as_index=False).max()\n",
     "pi_simple"
    ]
   },
@@ -210,6 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the map name\n",
     "map_name = data['header']['map_name'].iat[0]\n",
     "print(map_name)"
    ]
@@ -221,6 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combine the data into a final dataframe\n",
     "df_final = pd.merge(df_footsteps_total, pi_simple, how='left', on='player_id_fixed')\n",
     "df_final['map_name'] = map_name\n",
     "df_final"
