--- a/notebooks/tutorial/5 - Create tome.ipynb
+++ b/notebooks/tutorial/5 - Create tome.ipynb
@@ -5,7 +5,7 @@
    "id": "065cdba6",
    "metadata": {},
    "source": [
-    "## Create a tome \n",
+    "## Create a tome for the footsteps data\n",
     "\n",
     "The general process for making a tome is:\n",
     "\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the functions from step 4\n",
+    "# Import the functions from step 4\n",
     "from pureskillgg_makenew_pyskill.tutorial import (\n",
     "    aggregate_footsteps, \n",
     "    simplify_player_info,\n",
@@ -95,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize our \"footsteps_by_rank\" tome\n",
     "tomer = curator.make_tome(\n",
     "    'footsteps_by_rank',\n",
     "    ds_reading_instructions=[\n",
@@ -119,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loop through each match and add our processed dataframe to \n",
     "for data, key in tomer.iterate():\n",
     "    df_footsteps_total = aggregate_footsteps(data['player_footstep'])\n",
     "    df_pi_simple = simplify_player_info(data['player_info'])\n",
