--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -103,9 +103,9 @@
    "id": "73fa1640",
    "metadata": {},
    "source": [
-    "## Training a model left as exercise to user\n",
+    "## Explore the tome\n",
     "\n",
-    ":) "
+    "Let's look at footsteps as a function of rank."
    ]
   },
   {
@@ -115,9 +115,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove unknown rank people\n",
+    "df=df[df['rank']!=0]\n",
+    "\n",
     "df['rank_fixed']=df['rank'].apply(lambda x: x/2).apply(round)\n",
     "\n",
-    "df.groupby('rank_fixed',as_index=False).max()"
+    "gb = df[['rank','steps']].groupby('rank',as_index=False).mean()\n",
+    "\n",
+    "gb"
    ]
   },
   {
@@ -126,12 +131,74 @@
    "id": "0fff4c68",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.scatter(gb['rank'],gb['steps'])\n",
+    "plt.xlabel('Rank')\n",
+    "plt.ylabel('Average Number of Steps')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d72a652b",
+   "metadata": {},
+   "source": [
+    "## Coaching time\n",
+    "\n",
+    "Obviously, any player that makes more than 1025 steps in a match is a pro, obviously and they deserve a 10/10 score. Anyone with less is a noob and will get a 1/10 score. We will do a toy example of applying this to one player in a match, which is how the Coach for PureSkill.gg works, mostly."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac208e0",
+   "id": "b9fbac65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the functions from step 4\n",
+    "from pureskillgg_makenew_pyskill.tutorial import (\n",
+    "    aggregate_footsteps, \n",
+    "    simplify_player_info,\n",
+    "    get_map_name, \n",
+    "    assemble_final_df\n",
+    ")\n",
+    "model_parameters={\n",
+    "    'footstep_threshold':1025\n",
+    "}\n",
+    "\n",
+    "def grade_footsteps(data, player_id_fixed):\n",
+    "    df_footsteps_total = aggregate_footsteps(data['player_footstep'])\n",
+    "    df_pi_simple = simplify_player_info(data['player_info'])\n",
+    "    map_name = get_map_name(data['header'])\n",
+    "    df_final = assemble_final_df(df_footsteps_total, df_pi_simple, map_name)\n",
+    "    player_footstep_count = df_final[df_final['player_id_fixed']==player_id_fixed]['steps'].iat[0]\n",
+    "    footstep_threshold = model_parameters['footstep_threshold']\n",
+    "    if player_footstep_count > footstep_threshold:\n",
+    "        return 1.0\n",
+    "    return 0.1\n",
+    "\n",
+    "# Grab a test match to analyze.\n",
+    "data = curator.get_single_match(0).get_channels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76d02b53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_player = data['player_info']['player_id_fixed'][0]\n",
+    "grade = grade_footsteps(data, random_player)\n",
+    "if grade > 0.5:\n",
+    "    print('congrats! you got a good grade.')\n",
+    "else:\n",
+    "    print('whoopsie, get gud kid.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7ec4f46",
    "metadata": {},
    "outputs": [],
    "source": []
