Update for latest dsdk API

--- a/notebooks/tutorial/4 - Do datascience exploration.ipynb
+++ b/notebooks/tutorial/4 - Do datascience exploration.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "# Just grab the first match\n",
-    "match_loader = curator.get_single_match(0)\n",
+    "match_loader = curator.get_match_by_index(0)\n",
     "\n",
     "# Get the manifest for these data.\n",
     "manifest = match_loader.manifest\n",
