--- a/notebooks/tutorial/6 - Train data science models.ipynb
+++ b/notebooks/tutorial/6 - Train data science models.ipynb
@@ -151,7 +151,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b9fbac65",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Import the functions from step 4\n",
@@ -177,7 +179,7 @@
     "    return 0.1\n",
     "\n",
     "# Grab a test match to analyze.\n",
-    "data = curator.get_single_match(0).get_channels()"
+    "data = curator.get_random_match().get_channels()"
    ]
   },
   {
@@ -194,14 +196,6 @@
     "else:\n",
     "    print('whoopsie, get gud kid.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7ec4f46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
