Add step about setting up aws credentials

--- a/notebooks/tutorial/1 - Setup.ipynb
+++ b/notebooks/tutorial/1 - Setup.ipynb
@@ -16,6 +16,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3fd27b4",
+   "metadata": {},
+   "source": [
+    "## Setup your AWS credentials\n",
+    "\n",
+    "Follow the [guide on setting up AWS credentials](https://docs.aws.amazon.com/sdk-for-java/v1/developer-guide/setup-credentials.html) to properly download things from the AWS Data Exchange."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "937d17f2",
    "metadata": {},
    "source": [
