Fix downloading sample data.

--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## What are these CSDS files?\n",
     "\n",
-    "In this notebook, you will download the sample CSDS data for 12 matches. CSDS stands for Counter Strike Data Science. We extract data from each demo file into outputs called channels. Each channel is one of four types.\n",
+    "In this notebook, you will download the sample CSDS data for 4 matches. CSDS stands for Counter Strike Data Science. We extract data from each demo file into outputs called channels. Each channel is one of four types.\n",
     "\n",
     "- Telemetry: Information as a function of time\n",
     "- Single event: Information for a single event type\n",
@@ -28,36 +28,16 @@
     "\n",
     "We built in a simple downloader for the sample data. The properties of the sample data are:\n",
     "\n",
-    "- 12 matches\n",
-    "- ~400 files \n",
-    "- ~300mb\n",
-    "- ~20 minutes to download with the simple downloader\n",
+    "- 4 matches\n",
+    "- ~120 files \n",
+    "- ~100mb\n",
+    "- ~10 seconds to download\n",
     "\n",
-    "For a larger dataset, you should copy the dataset to your s3 bucket and download it from there.\n",
+    "For the main dataset of 60k+ matches, you need to subscribe to the [product on the AWS Data Exchange](https://aws.amazon.com/marketplace/pp/prodview-v3o7zrt6okwmo).\n",
     "\n",
-    "Set your `dataset_id` from AWS. Follow these steps:\n",
-    "\n",
-    "- Log in to AWS.\n",
-    "- Subscribe to the [Sample dataset](https://aws.amazon.com/marketplace/pp/prodview-42sep6wtmcfvg) if you have not already.\n",
-    "- Navigate to the AWS Data Exchange.\n",
-    "- Under \"My Subscriptions\" click \"Entitled data\".\n",
-    "- Find `PureSkill.gg Competitive CS:GO Sample Data` in the list.\n",
-    "- Expand the dropdown to find `sample-csds-micro` and click on it.\n",
-    "- Expand the \"Data set overview\" box near the top to reveal the Data set ID.\n",
-    "\n",
-    "_**Replace the `dataset_id` parameter below with your particular ID then run the notebook.**_\n",
+    "The use license will be in your `PURESKILLGG_TOME_DS_COLLECTION_PATH` named `license.pdf`. You must agree to these terms to use the data.\n",
     "\n",
     "Note: you can safely stop and restart this downloader."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2956eaa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_id = '27cb2d5cd702007de08d8d08417c9c40'"
    ]
   },
   {
@@ -89,23 +69,36 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from pureskillgg_dsdk.exchange import download_dataexchange_dataset_revision"
+    "import requests\n",
+    "import zipfile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c63629e9",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "dc4195b1",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose our Data Science collection path as the location to save\n",
-    "output_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
+    "# # Choose our Data Science collection path as the location to save\n",
+    "dataset_sample_urls = [\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/91b4d9a6-26a7-4c2e-838f-ba8d86c2b8b2.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/4f6a3d09-99e8-476a-ba30-c7ee1992a276.zip\"\n",
+    "]\n",
     "\n",
-    "# Download the data\n",
-    "download_dataexchange_dataset_revision(output_path, dataset_id)"
+    "ds_collection_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
+    "\n",
+    "for index, url in enumerate(dataset_sample_urls):\n",
+    "    output_filename = os.path.join(ds_collection_path,f\"sample_{index}.zip\")\n",
+    "    if os.path.exists(output_filename):\n",
+    "        continue\n",
+    "\n",
+    "    response = requests.get(url)\n",
+    "    with open(output_filename, \"wb\") as f:\n",
+    "        f.write(response.content)\n",
+    "        \n",
+    "    with zipfile.ZipFile(output_filename, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(ds_collection_path)"
    ]
   }
  ],
