Update 2 - Download data.ipynb

--- a/notebooks/tutorial/2 - Download data.ipynb
+++ b/notebooks/tutorial/2 - Download data.ipynb
@@ -28,14 +28,14 @@
     "\n",
     "We built in a simple downloader for the sample data. The properties of the sample data are:\n",
     "\n",
-    "- 4 matches\n",
-    "- ~120 files \n",
-    "- ~100mb\n",
-    "- ~10 seconds to download\n",
+    "- 9 matches\n",
+    "- ~300 files \n",
+    "- ~200mb\n",
+    "- ~45 seconds to download\n",
     "\n",
     "For the main dataset of 60k+ matches, you need to subscribe to the [product on the AWS Data Exchange](https://aws.amazon.com/marketplace/pp/prodview-v3o7zrt6okwmo).\n",
     "\n",
-    "The use license will be in your `PURESKILLGG_TOME_DS_COLLECTION_PATH` named `license.pdf`. You must agree to these terms to use the data.\n",
+    "The use license will be in your `PURESKILLGG_TOME_DS_COLLECTION_PATH` named `LICENSE.pdf`. You must agree to these terms to use the data. See `README.md` for more information.\n",
     "\n",
     "Note: you can safely stop and restart this downloader."
    ]
@@ -69,8 +69,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests\n",
-    "import zipfile"
+    "import io\n",
+    "import zipfile\n",
+    "import requests"
    ]
   },
   {
@@ -82,23 +83,23 @@
    "source": [
     "# # Choose our Data Science collection path as the location to save\n",
     "dataset_sample_urls = [\n",
-    "    \"https://d1ewbp317vsrbd.cloudfront.net/91b4d9a6-26a7-4c2e-838f-ba8d86c2b8b2.zip\",\n",
-    "    \"https://d1ewbp317vsrbd.cloudfront.net/4f6a3d09-99e8-476a-ba30-c7ee1992a276.zip\"\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/a1b80cdb-d15a-4828-b955-f0f42c45109c.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/d39ba8f3-a61f-4bad-8550-42ec3fcf0e67.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/dfc0bf8a-2cd1-4073-9725-c70018f2c2fd.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/f7030153-7383-481a-87eb-450fa5cc408e.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/87303b35-34eb-4590-a058-f4d734987291.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/24321cdc-d788-46b4-8c2d-a7d385cdcd75.zip\",\n",
+    "    \"https://d1ewbp317vsrbd.cloudfront.net/85e30395-da9a-4f40-b3eb-e173ab42df6d.zip\"\n",
     "]\n",
     "\n",
     "ds_collection_path = os.environ.get('PURESKILLGG_TOME_DS_COLLECTION_PATH')\n",
     "\n",
     "for index, url in enumerate(dataset_sample_urls):\n",
-    "    output_filename = os.path.join(ds_collection_path,f\"sample_{index}.zip\")\n",
-    "    if os.path.exists(output_filename):\n",
-    "        continue\n",
-    "\n",
+    "    print(\"working on \",url)\n",
     "    response = requests.get(url)\n",
-    "    with open(output_filename, \"wb\") as f:\n",
-    "        f.write(response.content)\n",
-    "        \n",
-    "    with zipfile.ZipFile(output_filename, 'r') as zip_ref:\n",
-    "        zip_ref.extractall(ds_collection_path)"
+    "    bytes_content = io.BytesIO(response.content)\n",
+    "    zip_ref = zipfile.ZipFile(bytes_content)\n",
+    "    zip_ref.extractall(ds_collection_path)"
    ]
   }
  ],
