--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -22,7 +22,7 @@
     "This notebook will help you download data from the main dataset off of the data exchange.\n",
     "\n",
     "Here are the definition of some of the terms around data on the AWS Data Exchange (ADX):\n",
-    "- Data Exchange: Where the data is hosted on AWS\n",
+    "- Data Exchange: AWS service that hosts the data.\n",
     "- Data Product: This is our listing on the ADX where we are publishing the csds data.\n",
     "- Data set: A container for one type of data.\n",
     "- Revision: For the csds data, each revision is equivalent to one day of data. This allows for granularity for both data volume and date range.\n",
