--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -24,7 +24,7 @@
     "Here are the definition of some of the terms around data on the AWS Data Exchange (ADX):\n",
     "- Data Exchange: AWS service that hosts the data.\n",
     "- Data Product: This is our listing on the ADX where we are publishing the csds data.\n",
-    "- Data set: A container for one type of data.\n",
+    "- Data Set: A container for one type of data.\n",
     "- Revision: For the csds data, each revision is equivalent to one day of data. This allows for granularity for both data volume and date range.\n",
     "\n",
     "This notebook will show you how to transfer some set of revisions from the ADX to a bucket on S3. It will also allow you to enable automatic transferring for new revisions to S3."
