Update notebooks/tutorial/7 - Getting data from the ADX.ipynb
Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Here are the definition of some of the terms around data on the AWS Data Exchange (ADX):\n",
     "- Data Exchange: AWS service that hosts the data.\n",
-    "- Data Product: This is our listing on the ADX where we are publishing the csds data.\n",
+    "- Data Product: Listing on the ADX where we publish the csds data.\n",
     "- Data Set: A container for one type of data.\n",
     "- Revision: For the csds data, each revision is equivalent to one day of data. This allows for granularity for both data volume and date range.\n",
     "\n",
