Update notebooks/tutorial/7 - Getting data from the ADX.ipynb
Co-authored-by: Evan Sosenko <evan@pureskill.gg>

--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -321,7 +321,7 @@
     "There are many many ways to do this so we won't list them all here. We generally sync one month at a time with the AWS CLI like this:\n",
     "\n",
     "```\n",
-    "aws s3 sync s3://my-bucket/csds/2022/04/ .\n",
+    "aws s3 sync s3://my-bucket/csds/2022/04/ /path/to/working/dir/csds/2022/04\n",
     "```"
    ]
   },
