Update revision link and text. Add warning on pathing.

--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -72,7 +72,7 @@
     "- March 2022: 16,855\n",
     "- April 2022: 8,717\n",
     "\n",
-    "For the first bunch of revisions we uploaded, we made a [documentation website](https://docs.pureskill.gg/datascience/adx/csgo/matches_per_day) showing the approximate number of matches for each day. There is quite a large variance in some days due to promotions or other campaigns."
+    "For the first batch of historical revisions, you can find [the approximate number of matches for each day](https://docs.pureskill.gg/datascience/adx/csgo/csds/revisions). There is quite a large variance in some days due to spikes in user activity."
    ]
   },
   {
@@ -322,7 +322,9 @@
     "\n",
     "```\n",
     "aws s3 sync s3://my-bucket/csds/2022/04/ /path/to/working/dir/csds/2022/04\n",
-    "```"
+    "```\n",
+    "\n",
+    "It is **CRITICALLY IMPORTANT** to maintain the path structure. In the example above, you could change the `/path/to/working/dir` but the `csds/2022/04` is not something that you may change. The reader will not work because the folder structure is part of the key used to read each file."
    ]
   },
   {
@@ -375,7 +377,7 @@
     "\n",
     "You can also disable this automatic job through the AWS console by:\n",
     "\n",
-    "1. navigating to the ADX, \n",
+    "1. Navigating to the ADX, \n",
     "1. clicking on \"Entitled data\" under \"My Subscriptions\"\n",
     "1. Click on \"PureSkill.gg Competitive CS:GO Gameplay\"\n",
     "1. Click on the data set which should be named \"pureskillgg-csgo-production-dataexchange-csds-0\"\n",
