Update paragraph on transferring data.

--- a/notebooks/tutorial/7 - Getting data from the ADX.ipynb
+++ b/notebooks/tutorial/7 - Getting data from the ADX.ipynb
@@ -29,7 +29,7 @@
     "- Data Set: A container for one type of data.\n",
     "- Revision: For the csds data, each revision is equivalent to one day of data. This allows for granularity for both data volume and date range.\n",
     "\n",
-    "This notebook will show you how to transfer some set of revisions from the ADX to a bucket on S3. It will also allow you to enable automatic transferring for new revisions to S3."
+    "This notebook will transfer a selected set of revisions from the ADX to an S3 bucket on your AWS account. It will optionally allow you to enable automatic transfer of new revisions to S3."
    ]
   },
   {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5979aae0",
+   "id": "29b4d737",
    "metadata": {},
    "source": [
     "# 1. Subscribe to the Dataset on the ADX\n",
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6d09c8",
+   "id": "52a341d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d4296a",
+   "id": "c5161b02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a0f904e",
+   "id": "ab98b929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509f9952",
+   "id": "f2c0e884",
    "metadata": {},
    "source": [
     "# 3. Understand the Consqeuences of your Actions\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f3ef942",
+   "id": "ed3d69e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c970c4",
+   "id": "bc003b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22da7d4",
+   "id": "37fd1eef",
    "metadata": {},
    "source": [
     "## Import the usual"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5984187",
+   "id": "dc149e14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37220d0e",
+   "id": "8a0ba17f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "252e912d",
+   "id": "d4011bab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b611ae",
+   "id": "411d12df",
    "metadata": {},
    "source": [
     "# 4. Decide what to Transfer\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff1dc090",
+   "id": "4d5b35df",
    "metadata": {},
    "source": [
     "------------\n",
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84fc8591",
+   "id": "8290ee4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e6a8e76",
+   "id": "3ec425f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7946184e",
+   "id": "8c093afd",
    "metadata": {},
    "source": [
     "## Create bucket, if needed"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "625eac4c",
+   "id": "5003708a",
    "metadata": {
     "scrolled": false
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff81312",
+   "id": "a562d6a5",
    "metadata": {},
    "source": [
     "## Transfer date range from ADX to S3"
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc6bd861",
+   "id": "9892e84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "848c2f81",
+   "id": "d0916ed1",
    "metadata": {},
    "source": [
     "# 5. Transferring Data from S3 to Local\n",
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "271dd140",
+   "id": "c19a5744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc8a3523",
+   "id": "e1723a5d",
    "metadata": {},
    "source": [
     "## Enable exporting of revisions to S3"
